# agent-harness-playground

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/src/agent_harness_api/: __init__.py  auth.py  main.py
apps/web/: README.md  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/runs/: route.ts
apps/web/app/api/runs/[runId]/: route.ts
apps/web/app/api/runs/[runId]/cancel/: route.ts
apps/web/app/api/runs/[runId]/events/stream/: route.ts
apps/web/app/runs/[runId]/: page.tsx
apps/web/components/: dashboard-page.tsx  run-details-page.tsx
apps/web/lib/: api.ts  run-helpers.ts
apps/web/lib/server/: api-proxy.ts  operator-session.ts
apps/web/test/: api-routes.test.ts
apps/worker/: README.md  pyproject.toml
apps/worker/src/agent_harness_worker/: __init__.py  main.py
docs/: deployment.md  operations.md  workflow-learning-ladder.md
docs/tasks/: 01-workflow-learning-ladder.md  02-demo-route-workflow.md  03-demo-tool-single-workflow.md  04-demo-tool-select-workflow.md  08-readme-workflow-lessons.md  10-optional-anthropic-react-capstone.md
infra/docker/: compose.yml
infra/grafana/: README.md
infra/grafana/dashboards/: agent-harness-overview.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: datasources.yml
infra/otel/: README.md  collector.yaml  tempo.yaml
infra/prometheus/: README.md  alerts.yml  prometheus.yml
scripts/: production_canary.py
src/agent_harness_playground/: __init__.py
src/basic_langgraph_agent/: __init__.py  agent.py  tool_agent.py  usage_tracker.py
tasks/: 01-repo-foundation.md  02-backend-runtime.md  03-observability.md  04-nextjs-client.md  05-hardening-and-release.md  06-agent-core-workflow-migration.md  07-run-contracts-and-generated-types.md  08-web-server-proxy-and-session-boundary.md  09-model-backed-runtime-events-and-operator-ui.md  10-production-topology-and-rollout.md  README.md
tests/: test_agent.py  test_backend_runtime.py  test_isolated_executor.py  test_postgres_migrations.py
