[project]
name = "basic-langgraph-agent"
version = "0.1.0"
description = "Minimal LangGraph project for a first runnable agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0,<1.0.0",
    "langgraph>=1.0.10,<2.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
]

[project.scripts]
basic-agent = "basic_langgraph_agent.agent:main"
basic-agent-usage = "basic_langgraph_agent.usage_tracker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
