[project]
name = "basic-langgraph-agent"
version = "0.1.0"
description = "Minimal LangGraph project for a first runnable agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0,<1.0.0",
    "langgraph>=1.0.10,<2.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
]

[project.scripts]
basic-agent = "basic_langgraph_agent.agent:main"
basic-agent-usage = "basic_langgraph_agent.usage_tracker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "agent-harness-api",
    "agent-harness-worker",
    "agent-harness-core",
    "agent-harness-contracts",
    "fastapi>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.4.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "packages/agent-core",
    "packages/contracts",
]

[tool.uv.sources]
agent-harness-api = { workspace = true }
agent-harness-worker = { workspace = true }
agent-harness-core = { workspace = true }
agent-harness-contracts = { workspace = true }
