[project]
name = "agent-harness-playground"
version = "0.1.0"
description = "Workspace root for the agent harness playground monorepo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-harness-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_harness_playground"]

[dependency-groups]
dev = [
    "agent-harness-api",
    "agent-harness-worker",
    "agent-harness-core",
    "agent-harness-contracts",
    "agent-harness-observability",
    "fastapi>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "mypy>=1.18.0,<2.0.0",
    "pytest>=8.4.0,<9.0.0",
    "ruff>=0.13.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
files = [
    "apps/api/src",
    "apps/worker/src",
    "packages/agent-core/src",
    "packages/contracts/src",
    "packages/observability/src",
    "scripts/production_canary.py",
    "tests/test_backend_runtime.py",
    "tests/test_postgres_migrations.py",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "packages/agent-core",
    "packages/contracts",
    "packages/observability",
]

[tool.uv.sources]
agent-harness-api = { workspace = true }
agent-harness-worker = { workspace = true }
agent-harness-core = { workspace = true }
agent-harness-contracts = { workspace = true }
agent-harness-observability = { workspace = true }
