[project]
name = "agent-harness-api"
version = "0.1.0"
description = "FastAPI control plane for agent harness runs."
requires-python = ">=3.11"
dependencies = [
    "agent-harness-contracts",
    "agent-harness-core",
    "agent-harness-observability",
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[project.scripts]
agent-harness-api = "agent_harness_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.4.0,<9.0.0",
]
