[project]
name = "agent-harness-worker"
version = "0.1.0"
description = "Background worker placeholder for agent execution."
requires-python = ">=3.11"
dependencies = [
    "agent-harness-contracts",
    "agent-harness-core",
    "agent-harness-observability",
]

[project.scripts]
agent-harness-worker = "agent_harness_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
]
